<resources>
    <string name="app_name" translatable="false">Sr &amp; Sra</string>
    <string name="srsra" translatable="false">SrSra</string>

    <!-- Titles Telas-->
    <string name="title_Inicio">Inicio</string>
    <string name="title_sobre">Sobre</string>
    <string name="title_termo">Termos de Uso</string>
    <string name="title_manual">Manual do Usuário</string>
    <string name="title_despesas">Despesas</string>
    <string name="title_activity_configu">Configurações</string>
    <string name="title_convidados">Convidados</string>
    <string name="title_additems">Adicionar novo Item</string>
    <string name="title_checklist">Checklist</string>
    <string name="title_tarefas">Tarefas</string>
    <string name="title_padrinhos">Padrinhos</string>
    <string name="title_daminha">Daminhas e Pajens</string>
    <string name="title_fornecedor">Fornecedores</string>
    <string name="title_lista_presente">Presentes</string>
    <!-- Caixa Dialogo-->
    <string name="pesquisar_item">Pesquisar Item</string>

    <!-- Login -->
    <string name="entrar">Entrar</string>
    <string name="EntrarOff"> Iniciar offline </string>
    <string name="Cadastra_se">Cadastre-se</string>
    <string name="faceLogin">Entre com o Facebook</string>
    <string name="faceSair">Sair do Facebook</string>
    <string name="lembrar_senha">Lembrar Senha</string>

    <!-- Cadastro -->
    <string name="entraEmail">Iniciar sessão</string>
    <string name="cadastrar">Cadastre-se</string>
    <string name="cadastraTitle">Cadastre-se</string>
    <string name="e_mail">E-mail</string>
    <string name="senha">Senha</string>
    <string name="CadNome">Nome</string>
    <string name="addNoivo">Adicionar Noivo</string>
    <string name="dadosNoivo">Dados do Noivo</string>
    <string name="dadosNoiva">Dados do Noiva</string>
    <string name="data_do_casamento">Data do Casamento</string>
    <string name="cadastre_se">Cadastre-se</string>
    <string name="confirme_a_senha">Confirme a Senha</string>
    <string name="continuar">Continuar</string>
    <string name="nome_da_noiva">Nome da Noiva</string>
    <string name="nome_do_noivo">Nome do Noivo</string>

    <!-- Menu Lateral -->
    <string name="menuL_inicio">Inicio</string>
    <string name="menuL_check">Checklist</string>
    <string name="menuL_padrinho">Padrinhos</string>
    <string name="menuL_convidado">Convidados</string>
    <string name="menuL_daminhas">Daminhas e Pajens</string>
    <string name="menuL_fornecedor">Fornecedores</string>
    <string name="menuL_despesa">Despesas</string>
    <string name="menuL_outro">Outros</string>
    <string name="menuL_configu">Configurações</string>
    <string name="menuL_info">Sobre</string>
    <string name="sair">Sair</string>
    <string name="action_settings">Configurações</string>
    <string name="lista_de_presentes">Lista de Presentes</string>
    <string name="adicionar">Adicionar</string>
    <string name="pesquisar">Pesquisar</string>
    <string name="compartilhar">Compartilhar</string>
    <string name="excluir">Excluir</string>
    <string name="voltar">Voltar</string>

    <!-- Tela Configurações -->
    <string name="title_configura">Configurações</string>

    <!-- Tela Sobre -->
    <string name="versao">Versão</string>
    <string name="versaoNum" translatable="false">1.0</string>
    <string name="desenvolvedor">Desenvolvedor</string>
    <string name="termoUso">Termos de Uso</string>
    <string name="manualUser">Manual do Usuário</string>

    <!-- Tela Despesas -->
    <string name="meuorcamento">Meu Orçamento R$</string>
    <string name="pago">Pago</string>
    <string name="previsto">Previsto</string>
    <string name="sifrao">R$</string>
    <string name="restante">Restante</string>
    <string name="tab_Geral">Geral</string>
    <string name="tab_Mensal">Mensal</string>
    <string name="tab_Item">Por item</string>
    <string-array name="filtro" translatable="false">
        <item>Todos</item>
        <item>A pagar</item>
        <item>Pagos</item>
    </string-array>

    <!-- Adicionar novo Item-->
    <string-array name="meses" translatable="false">
        <item>@string/janeiro</item>
        <item>@string/fervereiro</item>
        <item>@string/marco</item>
        <item>@string/abril</item>
        <item>@string/maio</item>
        <item>@string/junho</item>
        <item>@string/julho</item>
        <item>@string/agosto</item>
        <item>@string/setembro</item>
        <item>@string/outubro</item>
        <item>@string/novembro</item>
        <item>@string/dezembro</item>
    </string-array>
    <string-array name="dias_mes" translatable="false">
        <item>01</item>
        <item>02</item>
        <item>03</item>
        <item>04</item>
        <item>05</item>
        <item>06</item>
        <item>07</item>
        <item>08</item>
        <item>09</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
        <item>13</item>
        <item>14</item>
        <item>15</item>
        <item>16</item>
        <item>17</item>
        <item>18</item>
        <item>19</item>
        <item>20</item>
        <item>21</item>
        <item>22</item>
        <item>23</item>
        <item>24</item>
        <item>25</item>
        <item>26</item>
        <item>27</item>
        <item>28</item>
        <item>29</item>
        <item>30</item>
        <item>31</item>
    </string-array>
    <string-array name="anos" translatable="false">
        <item>2001</item>
        <item>2002</item>
        <item>2003</item>
        <item>2004</item>
        <item>2005</item>
        <item>2006</item>
        <item>2007</item>
        <item>2008</item>
        <item>2009</item>
        <item>2010</item>
        <item>2011</item>
        <item>2012</item>
        <item>2013</item>
        <item>2014</item>
        <item>2015</item>
        <item>2016</item>
        <item>2017</item>
        <item>2018</item>
        <item>2019</item>
        <item>2020</item>
        <item>2021</item>
        <item>2022</item>
        <item>2023</item>
        <item>2024</item>
        <item>2025</item>
        <item>2026</item>
        <item>2027</item>
        <item>2028</item>
        <item>2029</item>
        <item>2030</item>
        <item>2031</item>
    </string-array>
    <string name="ano_inicial">Ano Inicial</string>
    <string name="anotacoes">Anotações</string>
    <string name="cancelar">Cancelar</string>
    <string name="data_inicial">Data Inicial</string>
    <string name="mes_inicial">Mês Inicial</string>
    <string name="nome_do_item">Nome do item</string>
    <string name="numero_de_parcelas">Nº de parcelas</string>
    <string name="numero_de_parcelas_pagas">Parcelas pagas</string>
    <string name="salvar">Salvar</string>
    <string name="valor_da_parcela">Valor da parcela</string>
    <string name="vencimento_por_mes">Dia do Vencimento</string>
    <string name="ok">Confirmar</string>
    <string name="data_termino">Data Termina</string>

    <!-- Tela de Contagem -->
    <string name="senhor">Sr. </string>
    <string name="senhora">Sra. </string>
    <string name="Ecomercial" translatable="false"> &amp; </string>
    <string name="faltam">Faltam </string>
    <string name="dias"> dias</string>
    <!-- Lista de Tarefas -->
    <string-array name="tarefas_array" translatable="false">
        <item>@string/um_ano_antes</item>
        <item>@string/dez_meses_antes</item>
        <item>@string/oito_meses_antes</item>
        <item>@string/seis_meses_antes</item>
        <item>@string/tres_meses_antes</item>
        <item>@string/dois_meses_antes</item>
        <item>@string/um_mes_antes</item>
        <item>@string/quinze_dias_antes</item>
        <item>@string/uma_semana_antes</item>
        <item>@string/dois_dias_antes</item>
        <item>@string/um_dia_antes</item>
        <item>@string/o_grande_dia</item>
        <item>@string/na_volta</item>
    </string-array>
    <string name="um_ano_antes">Um ano antes</string>
    <string name="dez_meses_antes">Dez meses antes</string>
    <string name="oito_meses_antes">Oito meses antes</string>
    <string name="seis_meses_antes">Seis meses antes</string>
    <string name="tres_meses_antes">Três meses antes</string>
    <string name="dois_meses_antes">Dois meses antes</string>
    <string name="um_mes_antes">Um mês antes</string>
    <string name="quinze_dias_antes">Quinze dias antes</string>
    <string name="uma_semana_antes">Uma semana antes</string>
    <string name="dois_dias_antes">Dois dias antes</string>
    <string name="um_dia_antes">Um dia antes</string>
    <string name="o_grande_dia">O grande dia</string>
    <string name="na_volta">Na volta da lua de mel</string>
    <!-- Fragmento Item-->
    <string name="deletar">Deletar</string>
    <string name="editar">Editar</string>

    <!-- Padrinhos -->
    <string-array name="convidou" translatable="false">
        <item>@string/noivo</item>
        <item>@string/noiva</item>
        <item>@string/noivos</item>
    </string-array>
    <string name="noivo">Noivo</string>
    <string name="noiva">Noiva</string>
    <string name="noivos">Noivos</string>
    <string name="nome_da_madrinha">Nome da madrinha</string>
    <string name="nome_do_padrinho">Nome do padrinho</string>
    <string name="madrinha">Madrinha</string>
    <string name="padrinho">Padrinho</string>
    <string name="quem_convidou">Quem convidou</string>

    <!-- Daminha -->
    <string name="daminha">Daminha</string>
    <string name="daminha_pajen">Daminha/Pajen</string>
    <string name="nome_da_crianca">Nome da criança</string>
    <string name="nome_do_responsavel">Nome do responsável</string>
    <string name="pajen">Pajen</string>
    <string name="responsavel">Responsável</string>
    <string name="telefone">Telefone</string>
    <string name="florista">Florista</string>

    <!-- Convidados -->
    <string name="tab_Resumo">Resumo</string>
    <string name="tab_Todos">Todos</string>
    <string name="tab_Convites">Convites</string>

    <!-- Links -->
    <string name="link_manualuser" translatable="false">https://www.google.com.br</string>
    <string name="link_termouso" translatable="false">https://www.google.com.br</string>

    <!-- Meses -->
    <string name="janeiro">Janeiro</string>
    <string name="fervereiro">Fervereiro</string>
    <string name="marco">Março</string>
    <string name="abril">Abril</string>
    <string name="maio">Maio</string>
    <string name="junho">Junho</string>
    <string name="julho">Julho</string>
    <string name="agosto">Agosto</string>
    <string name="setembro">Setembro</string>
    <string name="outubro">Outubro</string>
    <string name="novembro">Novembro</string>
    <string name="dezembro">Dezembro</string>
    <!-- Não Mudar !!!! -->
    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>
    <string name="facebook_app_id" translatable="false">1254906311271314</string>
    <!-- if your App ID is 1234567, you should use fb1234567-->
    <string name="fb_login_protocol_scheme" translatable="false">fbAPP_ID</string>
    <string name="we" translatable="false">We</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>