<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_add_dama"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="fourcodes.srsra.AddDama">

    <LinearLayout
        android:id="@+id/buttons"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnCancel"
            style="@style/ButtomCancel"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1" />

        <Button
            android:id="@+id/btnSalvar"
            style="@style/ButtomSalvar"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1" />
    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/buttons"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="20dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/lblDaminha"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/daminha_pajen"
                android:textColor="@color/TextPrimary" />

            <EditText
                android:id="@+id/txtNomeDama"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/lblDaminha"
                android:hint="@string/nome_da_crianca"
                android:textColor="@color/TextPrimary" />

            <CheckBox
                android:id="@+id/chk_daminha"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/txtNomeDama"
                android:text="@string/daminha" />

            <CheckBox
                android:id="@+id/chk_florista"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/chk_daminha"
                android:text="@string/florista" />

            <CheckBox
                android:id="@+id/chk_pajens"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/chk_florista"
                android:text="@string/pajen" />

            <TextView
                android:id="@+id/lblRespon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/chk_pajens"
                android:layout_marginTop="15dp"
                android:text="@string/responsavel"
                android:textColor="@color/TextPrimary" />

            <EditText
                android:id="@+id/txtNomeRespon"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/lblRespon"
                android:hint="@string/nome_do_responsavel"
                android:textColor="@color/TextPrimary" />

            <TextView
                android:id="@+id/lblTelRespon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/txtNomeRespon"
                android:layout_marginTop="15dp"
                android:text="@string/telefone"
                android:textColor="@color/TextPrimary" />

            <EditText
                android:id="@+id/txtTelRespon"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/lblTelRespon"
                android:hint="(XX) XXXX-XXXX"
                android:textColor="@color/TextPrimary" />
        </RelativeLayout>
    </ScrollView>
</RelativeLayout>
