<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:id="@+id/versao"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="10dp">

                <TextView
                    android:id="@+id/ver"
                    style="@style/Title3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/versao" />

                <TextView
                    android:id="@+id/versaoNum"
                    style="@style/Title3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_marginStart="5dp"
                    android:text="@string/versaoNum" />
            </LinearLayout>

            <TextView
                android:id="@+id/desenvolvedor"
                style="@style/Title2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/versao"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="10dp"
                android:text="@string/desenvolvedor" />

            <ImageView
                android:id="@+id/image"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/desenvolvedor"
                android:layout_centerHorizontal="true"
                android:src="@mipmap/logo" />

            <Button
                android:id="@+id/termo"
                style="@style/BottomTrans"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/image"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="10dp"
                android:text="@string/termoUso" />

            <Button
                android:id="@+id/manualUser"
                style="@style/BottomTrans"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/termo"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="10dp"
                android:text="@string/manualUser" />
        </RelativeLayout>
    </ScrollView>
</RelativeLayout>