<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_inicio"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="fourcodes.srsra.Inicio">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <ImageView
                android:id="@+id/imgLogo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:src="@mipmap/logo"/>

            <TextView
                android:id="@+id/lblNome"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/app_name"
                android:layout_below="@id/imgLogo"
                android:layout_centerHorizontal="true"
                style="@style/Title2"/>


            <com.facebook.login.widget.LoginButton
                xmlns:facebook="http://schemas.android.com/apk/res-auto"
                android:id="@+id/btnLoginFace"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_below="@id/lblNome"
                android:layout_alignRight="@id/imgLogo"
                android:layout_alignEnd="@id/imgLogo"
                android:layout_alignLeft="@id/imgLogo"
                android:layout_alignStart="@id/imgLogo"
                android:layout_centerHorizontal="true"
                facebook:com_facebook_login_text="@string/faceLogin"
                facebook:com_facebook_logout_text="@string/faceSair"
                />

            <Button
                android:id="@+id/btnEntra"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/btnLoginFace"
                android:layout_marginTop="30dp"
                android:layout_alignRight="@id/imgLogo"
                android:layout_alignEnd="@id/imgLogo"
                android:layout_alignLeft="@id/imgLogo"
                android:layout_alignStart="@id/imgLogo"
                android:layout_centerHorizontal="true"
                android:onClick="onClickEntra"
                android:text="@string/entraEmail"
                style="@style/Bottom"/>

            <Button
                android:id="@+id/btnEntraOff"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onClickOffLine"
                android:text="@string/EntrarOff"
                android:layout_marginTop="30dp"
                android:layout_alignRight="@id/imgLogo"
                android:layout_alignEnd="@id/imgLogo"
                android:layout_alignLeft="@id/imgLogo"
                android:layout_alignStart="@id/imgLogo"
                android:layout_below="@id/btnEntra"
                style="@style/Bottom"/>

            <Button
                android:id="@+id/btnCadastrarSe"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onClickCadastra"
                android:text="@string/cadastrar"
                android:layout_marginTop="30dp"
                android:layout_alignRight="@id/imgLogo"
                android:layout_alignEnd="@id/imgLogo"
                android:layout_alignLeft="@id/imgLogo"
                android:layout_alignStart="@id/imgLogo"
                android:layout_below="@id/btnEntraOff"
                style="@style/Bottom"/>
        </RelativeLayout>
    </ScrollView>

</RelativeLayout>
