<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_add_padrinho"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="fourcodes.srsra.AddPadrinho">

    <LinearLayout
        android:id="@+id/buttons"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnCancel"
            style="@style/ButtomCancel"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1" />

        <Button
            android:id="@+id/btnSalvar"
            style="@style/ButtomSalvar"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1" />
    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/buttons">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingEnd="@dimen/activity_vertical_margin"
            android:paddingLeft="@dimen/activity_vertical_margin"
            android:paddingRight="@dimen/activity_vertical_margin"
            android:paddingStart="@dimen/activity_vertical_margin">

            <TextView
                android:id="@+id/lblPadrinho"
                style="@style/textStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/padrinho" />

            <EditText
                android:id="@+id/txtPadrinho"
                style="@style/textStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/lblPadrinho"
                android:layout_marginLeft="15dp"
                android:layout_marginStart="15dp"
                android:layout_marginTop="10dp"
                android:hint="@string/nome_do_padrinho" />

            <TextView
                android:id="@+id/lblMadrinha"
                style="@style/textStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/txtPadrinho"
                android:layout_marginTop="30dp"
                android:text="@string/madrinha" />

            <EditText
                android:id="@+id/txtMadrinha"
                style="@style/textStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/lblMadrinha"
                android:layout_marginLeft="15dp"
                android:layout_marginStart="15dp"
                android:layout_marginTop="10dp"
                android:hint="@string/nome_da_madrinha" />

            <TextView
                android:id="@+id/lblConvidou"
                style="@style/textStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/txtMadrinha"
                android:layout_marginTop="15dp"
                android:text="@string/quem_convidou" />

            <Spinner
                android:id="@+id/spinConvidou"
                style="@style/textStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/lblConvidou"
                android:layout_marginLeft="15dp"
                android:layout_marginStart="15dp"
                android:popupBackground="@color/BackColor"
                android:spinnerMode="dropdown" />
        </RelativeLayout>
    </ScrollView>

</RelativeLayout>