<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_contagem"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="fourcodes.srsra.Contagem">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:ignore="UselessParent">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/imgLogo"
                android:layout_width="match_parent"
                android:layout_height="250dp"
                app:srcCompat="@mipmap/logo"
                android:layout_centerHorizontal="true"
                tools:ignore="ContentDescription" />

            <TextView
                android:id="@+id/lblNomeNoivo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/imgLogo"
                android:layout_centerHorizontal="true"
                style="@style/Title2"
                android:text="@string/senhor"/>
            <TextView
                android:id="@+id/lblNomeE"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/lblNomeNoivo"
                android:layout_centerHorizontal="true"
                style="@style/Title2"
                android:text="@string/Ecomercial"/>
            <TextView
                android:id="@+id/lblNomeNoiva"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/lblNomeE"
                android:layout_centerHorizontal="true"
                style="@style/Title2"
                android:text="@string/senhora"/>

            <LinearLayout
                android:id="@+id/DiaResta"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/lblNomeNoiva"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="20dp"
                android:orientation="horizontal">
                <TextView
                    android:id="@+id/lblDiaResta"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/Title3"
                    android:text="@string/faltam"/>
                <TextView
                    android:id="@+id/lblDiaRestaNum"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/Title3"
                    android:text="@string/_300"/>
                <TextView
                    android:id="@+id/lblDiaRestaD"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/Title3"
                    android:text="@string/dias"/>
            </LinearLayout>

            <ProgressBar
                android:id="@+id/progressBar"
                style="?android:attr/progressBarStyleHorizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@id/imgLogo"
                android:layout_alignStart="@+id/imgLogo"
                android:layout_alignRight="@id/imgLogo"
                android:layout_alignEnd="@id/imgLogo"
                android:layout_below="@+id/DiaResta"
                android:layout_centerHorizontal="true"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:background="@color/BackColor"
                android:foreground="#FF0000"
                />
        </RelativeLayout>
    </ScrollView>
</RelativeLayout>